# personality-based-hiring

./: .gitignore  README.md  pyproject.toml
data/: ocean_mbti.csv
model/: model.ipynb
monga/: _test.py  docker-compose.yml
notebooks/: photo.ipynb  prediction_results.txt  transcription.ipynb  whisper.ipynb
src/: mbti_converter.py
src/consumer/: broker.py  llm.py  mongo.py  photo.py  trans.py
streamlit/: bot.py  hh.py  main.py  mbti.py  requirements.txt  streamlit_app.py
streamlit/.streamlit/: config.toml
streamlit/files/: hh_dataset.csv
streamlit/functions/: utils.py
