[tool.poetry]
name = "personality-based-hiring"
version = "0.1.0"
description = ""
authors = ["ikanam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.46.2"
pillow = "^11.0.0"
torch = "^2.5.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
openai-whisper = "^20240930"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
